trunk/pywiimote/wiiuse.py


WIIMOTE_LED_NONE = 0 	# wiiuse.h:61
WIIMOTE_LED_1 = 16 	# wiiuse.h:62
WIIMOTE_LED_2 = 32 	# wiiuse.h:63
WIIMOTE_LED_3 = 64 	# wiiuse.h:64
WIIMOTE_LED_4 = 128 	# wiiuse.h:65
WIIMOTE_BUTTON_TWO = 1 	# wiiuse.h:68
WIIMOTE_BUTTON_ONE = 2 	# wiiuse.h:69
WIIMOTE_BUTTON_B = 4 	# wiiuse.h:70
WIIMOTE_BUTTON_A = 8 	# wiiuse.h:71
WIIMOTE_BUTTON_MINUS = 16 	# wiiuse.h:72
WIIMOTE_BUTTON_ZACCEL_BIT6 = 32 	# wiiuse.h:73
WIIMOTE_BUTTON_ZACCEL_BIT7 = 64 	# wiiuse.h:74
WIIMOTE_BUTTON_HOME = 128 	# wiiuse.h:75
WIIMOTE_BUTTON_LEFT = 256 	# wiiuse.h:76
WIIMOTE_BUTTON_RIGHT = 512 	# wiiuse.h:77
WIIMOTE_BUTTON_DOWN = 1024 	# wiiuse.h:78
WIIMOTE_BUTTON_UP = 2048 	# wiiuse.h:79
WIIMOTE_BUTTON_PLUS = 4096 	# wiiuse.h:80
WIIMOTE_BUTTON_ZACCEL_BIT4 = 8192 	# wiiuse.h:81
WIIMOTE_BUTTON_ZACCEL_BIT5 = 16384 	# wiiuse.h:82
WIIMOTE_BUTTON_UNKNOWN = 32768 	# wiiuse.h:83
WIIMOTE_BUTTON_ALL = 8095 	# wiiuse.h:84
NUNCHUK_BUTTON_Z = 1 	# wiiuse.h:87
NUNCHUK_BUTTON_C = 2 	# wiiuse.h:88
NUNCHUK_BUTTON_ALL = 3 	# wiiuse.h:89
CLASSIC_CTRL_BUTTON_UP = 1 	# wiiuse.h:92
CLASSIC_CTRL_BUTTON_LEFT = 2 	# wiiuse.h:93
CLASSIC_CTRL_BUTTON_ZR = 4 	# wiiuse.h:94
CLASSIC_CTRL_BUTTON_X = 8 	# wiiuse.h:95
CLASSIC_CTRL_BUTTON_A = 16 	# wiiuse.h:96
CLASSIC_CTRL_BUTTON_Y = 32 	# wiiuse.h:97
CLASSIC_CTRL_BUTTON_B = 64 	# wiiuse.h:98
CLASSIC_CTRL_BUTTON_ZL = 128 	# wiiuse.h:99
CLASSIC_CTRL_BUTTON_FULL_R = 512 	# wiiuse.h:100
CLASSIC_CTRL_BUTTON_PLUS = 1024 	# wiiuse.h:101
CLASSIC_CTRL_BUTTON_HOME = 2048 	# wiiuse.h:102
CLASSIC_CTRL_BUTTON_MINUS = 4096 	# wiiuse.h:103
CLASSIC_CTRL_BUTTON_FULL_L = 8192 	# wiiuse.h:104
CLASSIC_CTRL_BUTTON_DOWN = 16384 	# wiiuse.h:105
CLASSIC_CTRL_BUTTON_RIGHT = 32768 	# wiiuse.h:106
CLASSIC_CTRL_BUTTON_ALL = 65279 	# wiiuse.h:107
GUITAR_HERO_3_BUTTON_STRUM_UP = 1 	# wiiuse.h:110
GUITAR_HERO_3_BUTTON_YELLOW = 8 	# wiiuse.h:111
GUITAR_HERO_3_BUTTON_GREEN = 16 	# wiiuse.h:112
GUITAR_HERO_3_BUTTON_BLUE = 32 	# wiiuse.h:113
GUITAR_HERO_3_BUTTON_RED = 64 	# wiiuse.h:114
GUITAR_HERO_3_BUTTON_ORANGE = 128 	# wiiuse.h:115
GUITAR_HERO_3_BUTTON_PLUS = 1024 	# wiiuse.h:116
GUITAR_HERO_3_BUTTON_MINUS = 4096 	# wiiuse.h:117
GUITAR_HERO_3_BUTTON_STRUM_DOWN = 16384 	# wiiuse.h:118
GUITAR_HERO_3_BUTTON_ALL = 65279 	# wiiuse.h:119
WIIUSE_SMOOTHING = 1 	# wiiuse.h:123
WIIUSE_CONTINUOUS = 2 	# wiiuse.h:124
WIIUSE_ORIENT_THRESH = 4 	# wiiuse.h:125
WIIUSE_INIT_FLAGS = 5 	# wiiuse.h:126
WIIUSE_ORIENT_PRECISION = 100.0 	# wiiuse.h:128
EXP_NONE = 0 	# wiiuse.h:131
EXP_NUNCHUK = 1 	# wiiuse.h:132
EXP_CLASSIC = 2 	# wiiuse.h:133
EXP_GUITAR_HERO_3 = 3 	# wiiuse.h:134
enum_ir_position_t = c_int
WIIUSE_IR_ABOVE = 0
WIIUSE_IR_BELOW = 1
ir_position_t = enum_ir_position_t 	# wiiuse.h:140
MAX_PAYLOAD = 32 	# wiiuse.h:204
byte = c_ubyte 	# wiiuse.h:215
sbyte = c_char 	# wiiuse.h:216
class struct_wiimote_t(Structure):
    __slots__ = [
    ]
struct_wiimote_t._fields_ = [
    ('_opaque_struct', c_int)
]

class struct_wiimote_t(Structure):
    __slots__ = [
    ]
struct_wiimote_t._fields_ = [
    ('_opaque_struct', c_int)
]

wiiuse_read_cb = CFUNCTYPE(None, POINTER(struct_wiimote_t), POINTER(byte), c_ushort) 	# wiiuse.h:237
class struct_vec2b_t(Structure):
    __slots__ = [
        'x',
        'y',
    ]
struct_vec2b_t._fields_ = [
    ('x', byte),
    ('y', byte),
]

vec2b_t = struct_vec2b_t 	# wiiuse.h:262
class struct_vec3b_t(Structure):
    __slots__ = [
        'x',
        'y',
        'z',
    ]
struct_vec3b_t._fields_ = [
    ('x', byte),
    ('y', byte),
    ('z', byte),
]

vec3b_t = struct_vec3b_t 	# wiiuse.h:271
class struct_vec3f_t(Structure):
    __slots__ = [
        'x',
        'y',
        'z',
    ]
struct_vec3f_t._fields_ = [
    ('x', c_float),
    ('y', c_float),
    ('z', c_float),
]

vec3f_t = struct_vec3f_t 	# wiiuse.h:280
class struct_orient_t(Structure):
    __slots__ = [
        'roll',
        'pitch',
        'yaw',
        'a_roll',
        'a_pitch',
    ]
struct_orient_t._fields_ = [
    ('roll', c_float),
    ('pitch', c_float),
    ('yaw', c_float),
    ('a_roll', c_float),
    ('a_pitch', c_float),
]

orient_t = struct_orient_t 	# wiiuse.h:296
class struct_gforce_t(Structure):
    __slots__ = [
        'x',
        'y',
        'z',
    ]
struct_gforce_t._fields_ = [
    ('x', c_float),
    ('y', c_float),
    ('z', c_float),
]

gforce_t = struct_gforce_t 	# wiiuse.h:305
class struct_accel_t(Structure):
    __slots__ = [
        'cal_zero',
        'cal_g',
        'st_roll',
        'st_pitch',
        'st_alpha',
    ]
struct_accel_t._fields_ = [
    ('cal_zero', struct_vec3b_t),
    ('cal_g', struct_vec3b_t),
    ('st_roll', c_float),
    ('st_pitch', c_float),
    ('st_alpha', c_float),
]

accel_t = struct_accel_t 	# wiiuse.h:319
class struct_ir_dot_t(Structure):
    __slots__ = [
        'visible',
        'x',
        'y',
        'rx',
        'ry',
        'order',
        'size',
    ]
struct_ir_dot_t._fields_ = [
    ('visible', byte),
    ('x', c_uint),
    ('y', c_uint),
    ('rx', c_short),
    ('ry', c_short),
    ('order', byte),
    ('size', byte),
]

ir_dot_t = struct_ir_dot_t 	# wiiuse.h:338
enum_aspect_t = c_int
WIIUSE_ASPECT_4_3 = 0
WIIUSE_ASPECT_16_9 = 1
aspect_t = enum_aspect_t 	# wiiuse.h:348
class struct_ir_t(Structure):
    __slots__ = [
        'dot',
        'num_dots',
        'aspect',
        'pos',
        'vres',
        'offset',
        'state',
        'ax',
        'ay',
        'x',
        'y',
        'distance',
        'z',
    ]
struct_ir_t._fields_ = [
    ('dot', struct_ir_dot_t * 4),
    ('num_dots', byte),
    ('aspect', aspect_t),
    ('pos', ir_position_t),
    ('vres', c_uint * 2),
    ('offset', c_int * 2),
    ('state', c_int),
    ('ax', c_int),
    ('ay', c_int),
    ('x', c_int),
    ('y', c_int),
    ('distance', c_float),
    ('z', c_float),
]

ir_t = struct_ir_t 	# wiiuse.h:375
class struct_joystick_t(Structure):
    __slots__ = [
        'max',
        'min',
        'center',
        'ang',
        'mag',
    ]
struct_joystick_t._fields_ = [
    ('max', struct_vec2b_t),
    ('min', struct_vec2b_t),
    ('center', struct_vec2b_t),
    ('ang', c_float),
    ('mag', c_float),
]

joystick_t = struct_joystick_t 	# wiiuse.h:400
class struct_nunchuk_t(Structure):
    __slots__ = [
        'accel_calib',
        'js',
        'flags',
        'btns',
        'btns_held',
        'btns_released',
        'orient_threshold',
        'accel_threshold',
        'accel',
        'orient',
        'gforce',
    ]
struct_nunchuk_t._fields_ = [
    ('accel_calib', struct_accel_t),
    ('js', struct_joystick_t),
    ('flags', POINTER(c_int)),
    ('btns', byte),
    ('btns_held', byte),
    ('btns_released', byte),
    ('orient_threshold', c_float),
    ('accel_threshold', c_int),
    ('accel', struct_vec3b_t),
    ('orient', struct_orient_t),
    ('gforce', struct_gforce_t),
]

nunchuk_t = struct_nunchuk_t 	# wiiuse.h:423
class struct_classic_ctrl_t(Structure):
    __slots__ = [
        'btns',
        'btns_held',
        'btns_released',
        'r_shoulder',
        'l_shoulder',
        'ljs',
        'rjs',
    ]
struct_classic_ctrl_t._fields_ = [
    ('btns', c_short),
    ('btns_held', c_short),
    ('btns_released', c_short),
    ('r_shoulder', c_float),
    ('l_shoulder', c_float),
    ('ljs', struct_joystick_t),
    ('rjs', struct_joystick_t),
]

classic_ctrl_t = struct_classic_ctrl_t 	# wiiuse.h:440
class struct_guitar_hero_3_t(Structure):
    __slots__ = [
        'btns',
        'btns_held',
        'btns_released',
        'whammy_bar',
        'js',
    ]
struct_guitar_hero_3_t._fields_ = [
    ('btns', c_short),
    ('btns_held', c_short),
    ('btns_released', c_short),
    ('whammy_bar', c_float),
    ('js', struct_joystick_t),
]

guitar_hero_3_t = struct_guitar_hero_3_t 	# wiiuse.h:455
class struct_u1(Union):
    __slots__ = [
        'nunchuk',
        'classic',
        'gh3',
    ]
struct_u1._fields_ = [
    ('nunchuk', struct_nunchuk_t),
    ('classic', struct_classic_ctrl_t),
    ('gh3', struct_guitar_hero_3_t),
]

expunion = struct_u1 	# wiiuse.h:462
class struct_expansion_t(Structure):
    __slots__ = [
        'type',
        'u',
    ]
struct_expansion_t._fields_ = [
    ('type', c_int),
    ('u', expunion),
]

expansion_t = struct_expansion_t 	# wiiuse.h:472
enum_win_bt_stack_t = c_int
WIIUSE_STACK_UNKNOWN = 0
WIIUSE_STACK_MS = 1
WIIUSE_STACK_BLUESOLEIL = 2
win_bt_stack_t = enum_win_bt_stack_t 	# wiiuse.h:483
class struct_wiimote_state_t(Structure):
    __slots__ = [
        'exp_ljs_ang',
        'exp_rjs_ang',
        'exp_ljs_mag',
        'exp_rjs_mag',
        'exp_btns',
        'exp_orient',
        'exp_accel',
        'exp_r_shoulder',
        'exp_l_shoulder',
        'ir_ax',
        'ir_ay',
        'ir_distance',
        'orient',
        'btns',
        'accel',
    ]
struct_wiimote_state_t._fields_ = [
    ('exp_ljs_ang', c_float),
    ('exp_rjs_ang', c_float),
    ('exp_ljs_mag', c_float),
    ('exp_rjs_mag', c_float),
    ('exp_btns', c_ushort),
    ('exp_orient', struct_orient_t),
    ('exp_accel', struct_vec3b_t),
    ('exp_r_shoulder', c_float),
    ('exp_l_shoulder', c_float),
    ('ir_ax', c_int),
    ('ir_ay', c_int),
    ('ir_distance', c_float),
    ('orient', struct_orient_t),
    ('btns', c_ushort),
    ('accel', struct_vec3b_t),
]

wiimote_state_t = struct_wiimote_state_t 	# wiiuse.h:511
enum_WIIUSE_EVENT_TYPE = c_int
WIIUSE_NONE = 0
WIIUSE_EVENT = 1
WIIUSE_STATUS = 2
WIIUSE_CONNECT = 3
WIIUSE_DISCONNECT = 4
WIIUSE_UNEXPECTED_DISCONNECT = 5
WIIUSE_READ_DATA = 6
WIIUSE_NUNCHUK_INSERTED = 7
WIIUSE_NUNCHUK_REMOVED = 8
WIIUSE_CLASSIC_CTRL_INSERTED = 9
WIIUSE_CLASSIC_CTRL_REMOVED = 10
WIIUSE_GUITAR_HERO_3_CTRL_INSERTED = 11
WIIUSE_GUITAR_HERO_3_CTRL_REMOVED = 12
WIIUSE_EVENT_TYPE = enum_WIIUSE_EVENT_TYPE 	# wiiuse.h:532
class struct_wiimote_t(Structure):
    __slots__ = [
        'unid',
        'bdaddr',
        'bdaddr_str',
        'out_sock',
        'in_sock',
        'state',
        'leds',
        'battery_level',
        'flags',
        'handshake_state',
        'read_req',
        'accel_calib',
        'exp',
        'accel',
        'orient',
        'gforce',
        'ir',
        'btns',
        'btns_held',
        'btns_released',
        'orient_threshold',
        'accel_threshold',
        'lstate',
        'event',
        'event_buf',
    ]
class struct_anon_7(Structure):
    __slots__ = [
        'b',
    ]
struct_anon_7._fields_ = [
    ('b', c_uint8 * 6),
]

bdaddr_t = struct_anon_7 	# /usr/include/bluetooth/bluetooth.h:110
class struct_read_req_t(Structure):
    __slots__ = [
    ]
struct_read_req_t._fields_ = [
    ('_opaque_struct', c_int)
]

struct_wiimote_t._fields_ = [
    ('unid', c_int),
    ('bdaddr', bdaddr_t),
    ('bdaddr_str', c_char * 18),
    ('out_sock', c_int),
    ('in_sock', c_int),
    ('state', c_int),
    ('leds', byte),
    ('battery_level', c_float),
    ('flags', c_int),
    ('handshake_state', byte),
    ('read_req', POINTER(struct_read_req_t)),
    ('accel_calib', struct_accel_t),
    ('exp', struct_expansion_t),
    ('accel', struct_vec3b_t),
    ('orient', struct_orient_t),
    ('gforce', struct_gforce_t),
    ('ir', struct_ir_t),
    ('btns', c_ushort),
    ('btns_held', c_ushort),
    ('btns_released', c_ushort),
    ('orient_threshold', c_float),
    ('accel_threshold', c_int),
    ('lstate', struct_wiimote_state_t),
    ('event', WIIUSE_EVENT_TYPE),
    ('event_buf', byte * 32),
]

wiimote = struct_wiimote_t 	# wiiuse.h:584
# wiiuse.h:612
wiiuse_version = _lib.wiiuse_version
wiiuse_version.restype = c_char_p
wiiuse_version.argtypes = []

# wiiuse.h:614
wiiuse_init = _lib.wiiuse_init
wiiuse_init.restype = POINTER(POINTER(struct_wiimote_t))
wiiuse_init.argtypes = [c_int]

# wiiuse.h:615
wiiuse_disconnected = _lib.wiiuse_disconnected
wiiuse_disconnected.restype = None
wiiuse_disconnected.argtypes = [POINTER(struct_wiimote_t)]
